# vaxflux

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  getting-started.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  model-details.rst  model_details.rst
misc/: edit_api_docs.py
notebooks/: age_stratified_model.ipynb  flexible_model.ipynb  idd_demo.ipynb  multiseason_model.ipynb  single_curve_model.ipynb  synthetic_data.ipynb  uptake_model.ipynb
src/vaxflux/: __init__.py  _pymc.py  _util.py  covariates.py  curves.py  data.py  dates.py  interventions.py  model.py  multilevel_model.py  single_curve_model.py  uptake.py
src/vaxflux/sample_data/: Flu_Vacc_Data.csv
tests/_util/: test_ListOfFloats.py  test__clean_name.py  test__coord_index_dim.py  test__coord_name.py  test__pm_name.py  test__validate_and_format_observations.py
tests/covariates/: test_CovariateCategories.py  test_covariate_categories_class.py
tests/curves/: test_logistic_curve_class.py
tests/dates/: test__infer_ranges_from_observations.py  test_daily_date_ranges.py
tests/single_curve_model/: test_modified_logistic_curve.py
tests/uptake/: test_ScenarioDateRanges.py  test_SeasonalUptakeModel.py
vaxflux/: data.py  multilevel_model.py  single_curve_model.py
