[project]
name = "vaxflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy >=1.17.0,<2",
    "pymc ~=5.16.2",
    "scipy ~=1.14.1",
    "arviz ~=0.19.0",
    "requests ~=2.32.3",
    "pandas ~=2.2.2",
    "xarray>=2024.7.0",
]

[project.optional-dependencies]
demo = [
    "matplotlib ~=3.9.2",
    "seaborn ~=0.13.2",
    "ipykernel ~=6.29.5",
    "graphviz ~=0.20.3",
    "jupyter>=1.1.1",
]

[tool.uv]
dev-dependencies = [
    "black[jupyter]>=24.8.0",
    "pytest>=8.3.2",
    "ruff>=0.9.4",
]
