[project]
name = "vaxflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.17.0,<2",
    "pymc>5.16.2",
    "scipy>=1.14.1",
    "arviz>=0.19.0",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "xarray>=2024.7.0",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
demo = [
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.3.241126",
    "pytest>=8.3.2",
    "ruff>=0.9.4",
    "scipy-stubs>=1.15.1.0",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff.lint]
select = [
    "FLY",  # Flynt
    "I",    # Isort
    "NPY",  # Numpy
    "PD",   # Pandas
    "N",    # PEP8 Naming
    "PERF", # Perflint
    "E",    # Pycodestyle Errors
    "W",    # Pycodestyle Warnings
    "D",    # Docstring
    "F",    # Pyflakes
    "PL",   # Pylint
    "UP",   # Pyupgrade
]
ignore = [
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "PLR2004", # Consider replacing magic number with a constant variable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8  # Default is 5

[[tool.mypy.overrides]]
module = ["pymc.*"]
ignore_missing_imports = true
