[project]
name = "vaxflux"
version = "0.1.0"
description = "Flexible bayesian models for seasonal vaccine uptake."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.17.0,<2",
    "pymc>5.16.2",
    "scipy>=1.14.1",
    "arviz>=0.19.0",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "xarray>=2024.7.0",
    "pydantic>=2.10.6",
    "blackjax>=1.2.5",
]

[project.optional-dependencies]
demo = [
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
]

[tool.pytest.ini_options]
testpaths = [
    "src/vaxflux/",
    "tests/",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.3.241126",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=8.3.2",
    "rstcheck[sphinx]>=6.2.4",
    "ruff>=0.9.4",
    "scipy-stubs>=1.15.1.0",
    "sphinx>=8.1.3",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",  # Missing trailing comma, not needed when used with the formatter
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "PLR2004", # Consider replacing magic number with a constant variable
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.mccabe]
max-complexity = 12  # Default is 10

[tool.ruff.lint.per-file-ignores]
"docs/**/*" = [
    "INP001", # Implicit namespace package
]
"misc/**/*" = [
    "INP001", # Implicit namespace package
]
"tests/**/*" = [
    "INP001", # Implicit namespace package
    "S101",   # Use of `assert` detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8  # Default is 5

[[tool.mypy.overrides]]
module = ["pymc.*"]
ignore_missing_imports = true

[tool.rstcheck]
ignore_directives = [
    "automodule",
]
